--- a/src/Page/Ejercicios/Ejercicios.css
+++ b/src/Page/Ejercicios/Ejercicios.css
@@ -1,20 +1,17 @@
+/* FONDO DE LA PAGINA DE EJERCICIOS */
 .ejercicios {
   /* TAMAÑO DE HOME Y COLOR DE FONDO */
-  background-color: #fffd98;
   width: 720px;
-  height: 1560px;
+  height: 1060px;
 
-  margin-top: -20px;
+  row-gap: 80px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.btnSelect {
-  border: 1px solid black;
-}
-
+/* FORMA DE BOTONES DE CORRER, FLEX, SENT Y ABD */
 .btnEjercicios {
   width: 500px;
   height: 150px;
@@ -33,62 +30,73 @@
   color: #ffffff;
 
   /* FORMA DE BOTON */
-  border: 10px solid #4da8e4;
-  background-color: #3498db;
+  border: 5px outset #20ce20;
+  background-color: #20b920;
   border-radius: 15px;
   cursor: pointer;
-  /* box-shadow: 6px -6px 12px rgba(0, 0, 0, 1); */
 }
 
+/* CUADRO DE DIA Y BOTONES */
 .dataSerie {
   background-color: white;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 
-  /* width: 470px; */
   height: 100px;
+  margin-top: -35px;
 
-
-  font-size: 60px;
+  border: 1px solid gray;
+  border-radius: 5px;
   margin-bottom: 50px;
-  margin-top: -70px;
-
+  
+  font-family: "Lemon", serif;
+  font-weight: 60;
+  font-style: normal;
+  font-size: 30px;
 }
-
 .dataSerie2 {
   background-color: white;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 
-  /* width: 470px; */
   height: 100px;
+  margin-top: -35px;
+  border-radius: 5px 5px 0px 0px;
+  border: 1px solid gray;
 
-
-  font-size: 60px;
-
-  margin-top: -70px;
-
+  font-family: "Lemon", serif;
+  font-weight: 60;
+  font-style: normal;
+  font-size: 30px;
 }
 
-
-
+/* BOTONES SERIE, BACK Y OK */
 .btnOpcEjercicios {
   height: 60px;
   width: 80px;
+  
+  color: white;
   font-size: 15px;
+  font-weight: bold;
+ 
+  border: 5px outset #20ce20d3;
+  background-color: #20b920d7;
   border-radius: 30px;
 }
 
+/* FORMA DE CUADRO DE SERIES */
 .despliegueSerie {
-  background-color: #eeedb7;
-  margin-bottom: 50px;
+  background-color: #e4f3e4;
+  /* margin-bottom: 50px; */
   padding: 15px;
-  border: solid 1px #bdbb6b;
+  border: solid 1px gray;
+  border-radius: 0px 0px 5px 5px;
 
 }
 
+/* FORMA DE TABLA DE SERIES */
 .tabla {
   border: solid 1px black;
   font-size: 20px;
