--- a/src/Page/Home/Home.css
+++ b/src/Page/Home/Home.css
@@ -1,13 +1,13 @@
 .home {
     /* TAMAÑO DE HOME Y COLOR DE FONDO */
-    background-color: #fffd98;
     width: 720px;
-    height: 1560px;
+    height: 1060px;
 
     /* CENTRADO DE ITEMS */
     display: flex;
     flex-direction: column;
     align-items: center;
+    row-gap: 70px;
 }
 
 .btnHome {
@@ -30,9 +30,9 @@
     color: #ffffff;
 
     /* FORMA DE BOTON */
-    border: 10px solid #4da8e4;
-    background-color: #3498db;
+    border: 5px outset #20ce20;
+    background-color: #20b920;
     border-radius: 15px;
     cursor: pointer;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 1);
+    /* box-shadow: 0 6px 12px rgba(0, 0, 0, 1); */
 }
