--- a/src/Page/Alimentacion/Alimentacion.css
+++ b/src/Page/Alimentacion/Alimentacion.css
@@ -32,7 +32,7 @@
     cursor: pointer;
 }
 
-.tablaAlimen{
+.tablaAlimen {
     border: solid 1px black;
     font-size: 20px;
     padding: 5px;
@@ -43,11 +43,20 @@
 
 .cuadroSemanaAlimen {
     background-color: #e4f3e4;
-    /* margin-bottom: 50px; */
+    width: 600px;
     padding: 15px;
+    margin-bottom: 40px;
     border: solid 1px gray;
     border-radius: 0px 0px 5px 5px;
 }
+
+.container_btnOpc {
+    margin: 20px 20px;
+    display: flex;
+    column-gap: 10px;
+}
+
+
 
 
 .dataAlimentacion {
@@ -55,11 +64,11 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-  
+
     height: 100px;
     width: 450px;
     margin-top: -35px;
-  
+
     border: 1px solid gray;
     border-radius: 5px;
     margin-bottom: 50px;
@@ -69,12 +78,23 @@
 .btnOpcAlimento {
     height: 60px;
     width: 80px;
-    
+
     color: white;
     font-size: 15px;
     font-weight: bold;
-   
+
     border: 5px outset #20ce20d3;
     background-color: #20b920d7;
     border-radius: 30px;
+}
+
+.btnOpc {
+    width: 100px;
+}
+
+.selectAliment {
+    width: 300px;
+    margin: 10px 10px;
+    border: 2px solid #333;
+    border-radius: 5px;
 }
