--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,7 +1,8 @@
 .header {
     /* TAMAÑO DE HEADER Y COLOR*/
-    width: 720px;
-    height: 500px;
+    background-color: rgb(180, 176, 176);
+    width: 620px;
+    height: 300px;
     
     /* CENTRADO DE TEXTO */
     display: flex;
