--- a/src/Page/Alimentacion/Alimentacion.css
+++ b/src/Page/Alimentacion/Alimentacion.css
@@ -26,8 +26,8 @@
     color: #ffffff;
 
     /* FORMA DE BOTON */
-    border: 5px outset #20ce20;
-    background-color: #20b920;
+    border: 5px outset #06a794;
+    background-color: #00796b;
     border-radius: 15px;
     cursor: pointer;
 }
@@ -42,7 +42,7 @@
 }
 
 .cuadroSemanaAlimen {
-    background-color: #e4f3e4;
+    background-color: white;
     width: 600px;
     padding: 15px;
     margin-bottom: 40px;
@@ -83,8 +83,8 @@
     font-size: 15px;
     font-weight: bold;
 
-    border: 5px outset #20ce20d3;
-    background-color: #20b920d7;
+    border: 5px outset #09dfc6;
+    background-color: #07b39f;
     border-radius: 30px;
 }
 
