--- a/src/Page/Ejercicios/Ejercicios.css
+++ b/src/Page/Ejercicios/Ejercicios.css
@@ -4,7 +4,8 @@
   width: 720px;
   height: 1060px;
 
-  row-gap: 80px;
+  row-gap: 20px;
+  margin-top: 50px;
 
   display: flex;
   flex-direction: column;
@@ -30,8 +31,8 @@
   color: #ffffff;
 
   /* FORMA DE BOTON */
-  border: 5px outset #20ce20;
-  background-color: #20b920;
+  border: 5px outset #06a794;
+  background-color: #00796b;
   border-radius: 15px;
   cursor: pointer;
 }
@@ -81,14 +82,14 @@
   font-size: 15px;
   font-weight: bold;
  
-  border: 5px outset #20ce20d3;
-  background-color: #20b920d7;
+  border: 5px outset #09dfc6;
+  background-color: #07b39f;
   border-radius: 30px;
 }
 
 /* FORMA DE CUADRO DE SERIES */
 .despliegueSerie {
-  background-color: #e4f3e4;
+  background-color: white;
   /* margin-bottom: 50px; */
   padding: 15px;
   border: solid 1px gray;
