--- a/src/Page/Seguimiento/Seguimiento.css
+++ b/src/Page/Seguimiento/Seguimiento.css
@@ -3,6 +3,8 @@
     width: 720px;
     height: 1060px;
 
+    margin-top: 100px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
