--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,139 @@
 body {
     background-color: #dcedc8;
 }
+
+/* FONDO DE CADA PAGINA */
+.fondo {
+    /* TAMAÑO DE HOME Y COLOR DE FONDO */
+    width: 720px;
+    height: 1060px;
+
+    /* CENTRADO DE ITEMS */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* row-gap: 70px; */
+    margin-top: 50px
+}
+
+/* BOTONES PRINCIPALES DE CADA PAGINA */
+.btnPrincipal {
+    /* TAMAÑO Y SEPARACION DE BOTONES */
+    width: 500px;
+    height: 150px;
+    margin: 60px;
+
+    /* CENTRADO DE TEXTO */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* LETRA DE BOTON */
+    text-decoration: none;
+    font-family: "Lemon", serif;
+    font-weight: 80;
+    font-style: normal;
+    font-size: 35px;
+    color: #ffffff;
+
+    /* FORMA DE BOTON */
+    border: 5px outset #06a794;
+    background-color: #00796b;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+/* CONTENEDOR DE OPCIONES */
+.container_opciones {
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  height: 100px;
+  width: 480px;
+  margin-top: -35px;
+
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin-bottom: 50px;
+  
+  font-family: "Lemon", serif;
+  font-weight: 60;
+  font-style: normal;
+  font-size: 30px;
+}
+
+/* BOTONES DE OPCIONES */
+.btn_container_opciones {
+    height: 60px;
+    width: 80px;
+
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+
+    border: 5px outset #09dfc6;
+    background-color: #07b39f;
+    border-radius: 30px;
+}
+.btnOpc {
+    width: 100px;
+}
+.container_btnOpc {
+    margin: 20px 20px;
+    display: flex;
+    column-gap: 10px;
+}
+
+/* TABLA DE OPCIONES */
+.title_tabla {
+    margin-bottom: 10px;
+    text-align: right;
+    font-family: "Lemon", serif;
+    font-weight: 30;
+    font-style: normal;
+    font-size: 15px;
+}
+.container_tabla {
+    background-color: white;
+    /* margin-bottom: 50px; */
+    padding: 15px;
+    border: solid 1px gray;
+    border-radius: 0px 0px 5px 5px;
+}
+.tabla {
+    border: solid 1px black;
+    font-size: 20px;
+    padding: 5px;
+    text-align: center;
+    letter-spacing: 5px; 
+    word-spacing: 10px;
+}
+
+/* FORMULARIO DE SEGUIMIENTO */
+.formNewSeguimiento {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    width: 400px;
+    height: 250px;
+    margin-bottom: 40px;
+    border: solid black 1px;
+}
+.inputSeguimiento {
+    width: 300px;
+    height: 25px;
+}
+
+/* SELECT DE ALIMENTOS */
+.selectAliment {
+    width: 300px;
+    height: 50px;
+    margin: 10px 10px;
+    border: 2px solid #333;
+    border-radius: 5px;
+}
