--- a/src/App.css
+++ b/src/App.css
@@ -45,23 +45,28 @@ body {
 
 /* CONTENEDOR DE OPCIONES */
 .container_opciones {
-  background-color: white;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+    background-color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
-  height: 100px;
-  width: 480px;
-  margin-top: -35px;
+    height: 100px;
+    width: 480px;
+    margin-top: -35px;
 
-  border: 1px solid gray;
-  border-radius: 5px;
-  margin-bottom: 50px;
-  
-  font-family: "Lemon", serif;
-  font-weight: 60;
-  font-style: normal;
-  font-size: 30px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    margin-bottom: 50px;
+
+    font-family: "Lemon", serif;
+    font-weight: 60;
+    font-style: normal;
+    font-size: 30px;
+}
+.flex_container_opciones {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* BOTONES DE OPCIONES */
@@ -77,9 +82,11 @@ body {
     background-color: #07b39f;
     border-radius: 30px;
 }
+
 .btnOpc {
     width: 100px;
 }
+
 .container_btnOpc {
     margin: 20px 20px;
     display: flex;
@@ -95,19 +102,21 @@ body {
     font-style: normal;
     font-size: 15px;
 }
+
 .container_tabla {
     background-color: white;
-    /* margin-bottom: 50px; */
+    margin-bottom: 50px;
     padding: 15px;
     border: solid 1px gray;
     border-radius: 0px 0px 5px 5px;
 }
+
 .tabla {
     border: solid 1px black;
     font-size: 20px;
     padding: 5px;
     text-align: center;
-    letter-spacing: 5px; 
+    letter-spacing: 5px;
     word-spacing: 10px;
 }
 
@@ -118,22 +127,40 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    row-gap: 15px;
+    padding: 15px 15px;
 
     width: 400px;
     height: 250px;
     margin-bottom: 40px;
     border: solid black 1px;
 }
+
 .inputSeguimiento {
     width: 300px;
     height: 25px;
 }
 
 /* SELECT DE ALIMENTOS */
+.flex_select {
+    display: flex;
+    justify-content: space-evenly;
+}
 .selectAliment {
+    appearance: none;
     width: 300px;
-    height: 50px;
+    height: 60px;
     margin: 10px 10px;
-    border: 2px solid #333;
-    border-radius: 5px;
+    border-radius: 25px;
+    text-align: center;
+    font-size: 30px;
+    border: 5px outset #09dfc6;
+    background-color: #07b39f;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+}
+.selectDay {
+    width: 150px;
+
 }
