--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
 /* FONDO DE CADA PAGINA */
 .fondo {
     /* TAMAÑO DE HOME Y COLOR DE FONDO */
-    width: 720px;
+    width: 100%;
     height: 1060px;
 
     /* CENTRADO DE ITEMS */
