--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
     /* TAMAÑO DE HEADER Y COLOR*/
-    width: 100%;
+    width: 720px;
     height: 300px;
     
     /* CENTRADO DE TEXTO */
